language change window is added

--- a/web/static/assets/css/wellcome.css
+++ b/web/static/assets/css/wellcome.css
@@ -1,9 +1,19 @@
-#myModal{
+#loginWindow{
 	width:250px;
 	height:400px;
 	background:white;
 	position: absolute;
     left: 50%;
     top: 50%;
+	transform: translate(-50%,-50%);
+}
+
+#languageChangeWindow{
+	width:250px;
+	height:400px;
+	background:white;
+	position: absolute;
+	left: 50%;
+	top: 50%;
 	transform: translate(-50%,-50%);
 }
